# backend-api/routes/api.php
@@ -19,3 +19,8 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 });
 
 Route::post('/login', [\App\Http\Controllers\AuthController::class, 'login']);
+Route::get('/getUsers', [\App\Http\Controllers\AuthController::class, 'getUsers']);
+
+Route::get('/thuetainguyen', [\App\Http\Controllers\ThueTaiNguyenController::class, 'index']);
+Route::get('/thuetainguyen/{mahs}', [\App\Http\Controllers\ThueTaiNguyenController::class, 'show']);
+
